    - please refer to the RELEASE NOTES for version 4.00 and above for all
      recent changes and file an issue on github if there has been a regression.
    - please do *NOT* file issues regarding HTML generating functions, these
      are no longer being maintained (see perldoc for rational)

    [ SPEC / BUG FIXES ]
    - tweak url to DTRT when the web server is IIS (RT #89827 / GH #152)

4.08 2014-10-18

    [ DOCUMENTATION ]
    - note that calling headers without a -charset may lead to a nonsensical
      charset being added to certain content types due to the default and the
      workaround
    - remove documentation stating that calls to escapeHTML with a changed
      charset force numeric encoding of all characters, because that does not
      happen
    - documentation tweaks for calling param() in list context and the addition
      of multi_param()

    [ SPEC / BUG FIXES ]
    - don't sub out PATH_INFO in url if PATH_INFO is the same as SCRIPT_NAME
      (RT #89827)
    - add multi_param() method to allow calling of param() in list context
      without having to disable the $LIST_CONTEXT_WARN flag (see RELEASE NOTES
      for version 4.05 on why calling param() in list context could be a bad
      thing)

4.07 2014-10-12

    [ RELEASE NOTES ]
    - please see changes for v4.05

    [ TESTING ]
    - typo and POD fixes, add test to check POD and compiles

4.06 2014-10-10

    [ RELEASE NOTES ]
    - please see changes for v4.05

    [ DOCUMENTATION ]
    - make warning on list context call of ->param more lenient and don't
      warn if called with no arguments

4.05 2014-10-08

    [ RELEASE NOTES ]
    - this release includes *significant* refactoring of temporary file
      handling in CGI.pm. See "Changes in temporary file handling" in perldoc

    - this release adds a warning for when the param method is called
      in list context, see the Warning in the perldoc for the section