@@ -15,6 +15,8 @@
 
     [ SPEC / BUG FIXES ]
     - tweak url to DTRT when the web server is IIS (RT #89827 / GH #152)
+    - fix temporary file handling when dealing with multiple files in MIME uploads
+      (GH #154, thanks to GeJ for the test case)
 
 4.08 2014-10-18
 
